<resources>
    <string name="app_name">EYEHUB_proto</string>
    <string name="time_up">"Time:0"</string>
    <string name="score">"Score: "</string>
    <string name="uzun">Uzun</string>
    <string name="üzüm">Üzüm</string>
    <string name="kuru">Kuru</string>
    <string name="kuzu">Kuzu</string>
    <string name="kurt">Kurt</string>
    <string name="yurt">Yurt</string>
    <string name="bal">Bal</string>
    <string name="bol">Bol</string>
    <string name="elma">Elma</string>
    <string name="mla">İmla</string>
    <string name="özgün">Özgün</string>
    <string name="çelik">Çelik</string>
    <string name="özgür">Özgür</string>
    <string name="çekik">Çekik</string>
    <string name="hal">Hal</string>
    <string name="hak">Hak</string>
    <string name="doğruluk_yüzdesi">Doğruluk Yüzdesi</string>
    <string name="doğru_olan_kelimeyi_işaretleyiniz">Doğru olan kelimeyi işaretleyiniz.</string>
    <string name="başla">BAŞLA</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sifrenizi_giriniz">Şifrenizi giriniz</string>
    <string name="sifremi_unuttum">Şifremi unuttum</string>
    <string name="bir_hesabin_yok_mu">Bir hesabın yok mu?</string>
    <string name="kayit_ol">Kayıt Ol</string>
    <string name="e_posta_adresinizi_giriniz">E-posta adresinizi giriniz</string>
    <string name="sifreyi_tekrar_giriniz">Şifreyi tekrar giriniz</string>
    <string name="bir_sifre_giriniz">Bir şifre giriniz</string>
    <string name="tamam">Tamam</string>
    <string name="forget_pass_desc">Aşağıdaki boşluğa e-posta adresinizi yazıp TAMAM butonuna tıkladıktan sonra şifrenizi yenilemeniz için e-posta adresinize bir link gönderilecektir. Birkaç dakika içerisinde gelen kutunuzu kontrol edebilirsiniz.</string>
    <string name="kullanici">Kullanıcı Adı</string>
    <string name="disleksi_text">Günlerden bir gün, kaplumbağa tavşanın karşısına geçmiş:Ben senden daha hızlı koşarım\! demiş. Tavşan: Git işine\! demişse de dinletememiş. Sonunda bakmış olmayacak, yarış etmeye hazır olmuş. Gün gösterip sözleşmişler, sonra ayrılmışlar. Günü gelmiş. Tavşan nasıl koştuğunu biliyor ya! hiç aldırmamış, yolun kıyısına kıvrılmış, uyumuş; ama kaplumbağa koşamayacağını biliyor, bir dakikasını bile geçirmemiş, hemen yola düzülmüş, gidecekleri yere tavşandan önce varmış.</string>
    <string name="hazir_metin">Örnek Metin</string>
    <string name="sonuc_text">Sonuç</string>
    <string name="sonucunuz">Sonucunuz</string>
    <string name="gonder">Gönder</string>
    <string name="basla">Başla</string>
    <string name="todo">TODO</string>


    <string name="navigation_drawer_open">Navigasyon dolabını aç</string>
    <string name="navigation_drawer_close">Navigasyon dolabını kapa</string>

    <string name="action_settings">Ayarlar</string>
    <string name="ball_game">Top Oyunu</string>
    <string name="words_game">Kelime Oyunu</string>
    <string name="summation_substraction">Toplama Çıkarma</string>
    <string name="text_to_speech">Yazıdan Konuşmaya</string>
    <string name="education">Eğitim</string>

    <string name="gallery">Galeri</string>
    <string name="slideshow">Slayt Gösterisi</string>
    <string name="tools">Araçlar</string>
    <string name="only_toggle_theme_would_work">Sadece Tema Değiştirme Çalışacak</string>
    <string name="share">Paylaş</string>
    <string name="toggle_theme">Tema Değiştir</string>
    <string name="menu">Menü</string>
    <string name="courses">Kurslar</string>
    <string name="home">Ana Sayfa</string>
    <string name="search">Ara</string>
    <string name="user">Kullanıcı</string>
    <string name="imp">İçe Aktar</string>
    <string name="Turkish">Türkçe</string>
    <string name="English">İngilizce</string>
    <string name="languages">Diller</string>


</resources>