<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:gl="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    tools:showIn="@layout/app_bar_main"
    style="@style/parent.contentLayout"
    android:background="#00000000">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/education"
                    style="@style/viewParent.headerText"
                    android:layout_gravity="bottom"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/hero"
                    android:adjustViewBounds="true" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="15dp"
                        app:cardPreventCornerOverlap="true"
                        android:layout_marginTop="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:minHeight="100dp"
                            android:background="@drawable/home_gradient_maths"
                            android:padding="10dp">

                            <ImageButton
                                android:layout_width="154dp"
                                android:layout_height="80dp"
                                android:contentDescription="@string/todo"
                                android:maxHeight="90dp"
                                android:onClick="basketOnClick"
                                android:background="@null"
                                />

                            <TextView
                                android:id="@+id/textViewSub1Title"
                                style="@style/viewParent.headerText.HomeCardTitle"
                                android:text="@string/ball_game" />

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="15dp"
                        app:cardPreventCornerOverlap="true"
                        android:layout_marginTop="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:minHeight="100dp"
                            android:background="@color/gradientViolet"
                            android:padding="10dp">

                            <ImageButton
                                android:layout_width="154dp"
                                android:layout_height="80dp"
                                android:background="@null"
                                style="@style/homeCardImage"
                                android:onClick="wordOnClick"
                                android:contentDescription="@string/todo" />

                            <TextView
                                android:id="@+id/textViewSub3Title"
                                android:text="@string/words_game"
                                style="@style/viewParent.headerText.HomeCardTitle" />


                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="15dp"
                        app:cardPreventCornerOverlap="true"
                        android:layout_marginTop="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:minHeight="100dp"
                            android:background="@drawable/home_gradient_geo"
                            android:padding="10dp">

                            <ImageButton
                                android:layout_width="154dp"
                                android:layout_height="80dp"
                                android:background="@null"
                                style="@style/homeCardImage"
                                android:onClick="topcikOnClick"
                                android:contentDescription="@string/todo" />

                            <TextView
                                android:id="@+id/textViewSub5Title"
                                android:text="@string/summation_substraction"
                                style="@style/viewParent.headerText.HomeCardTitle" />

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="15dp"
                        app:cardPreventCornerOverlap="true"
                        android:layout_marginTop="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/home_gradient_chem"
                            android:minHeight="100dp"
                            android:padding="10dp">

                            <ImageButton
                                style="@style/homeCardImage"
                                android:contentDescription="@string/todo"
                                android:layout_width="154dp"
                                android:layout_height="80dp"
                                android:onClick="t2sOnClick"
                                android:background="@null"  />

                            <TextView
                                style="@style/viewParent.headerText.HomeCardTitle"
                                android:text="@string/text_to_speech" />


                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">


                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="15dp"
                        app:cardPreventCornerOverlap="true"
                        android:layout_marginTop="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:minHeight="100dp"
                            android:background="@drawable/home_gradient_phy"
                            android:padding="10dp">

                            <ImageView
                                android:maxHeight="90dp"
                                android:src="@drawable/home_ic_physics"
                                style="@style/homeCardImage"/>

                            <TextView
                                android:id="@+id/textViewSub2Title"
                                android:text="@string/todo"
                                style="@style/viewParent.headerText.HomeCardTitle" />

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="15dp"
                        app:cardPreventCornerOverlap="true"
                        android:layout_marginTop="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:minHeight="100dp"
                            android:background="@drawable/home_gradient_bio"
                            android:padding="10dp">

                            <ImageView
                                android:maxHeight="90dp"
                                android:src="@drawable/home_ic_biology"
                                style="@style/homeCardImage" />

                            <TextView
                                android:id="@+id/textViewSub4Title"
                                android:text="@string/todo"
                                style="@style/viewParent.headerText.HomeCardTitle" />


                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="15dp"
                        app:cardPreventCornerOverlap="true"
                        android:layout_marginTop="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:minHeight="100dp"
                            android:background="@drawable/home_gradient_pol"
                            android:padding="10dp">

                            <ImageView
                                android:maxHeight="90dp"
                                android:src="@drawable/home_ic_chemistry"
                                style="@style/homeCardImage" />

                            <TextView
                                android:id="@+id/textViewSub6Title"
                                android:text="@string/todo"
                                style="@style/viewParent.headerText.HomeCardTitle" />

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="15dp"
                        app:cardPreventCornerOverlap="true"
                        android:layout_marginTop="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:minHeight="100dp"
                            android:background="@drawable/home_gradient_bio"
                            android:padding="10dp">

                            <ImageView
                                android:maxHeight="90dp"
                                android:src="@drawable/home_ic_biology"
                                style="@style/homeCardImage" />

                            <TextView
                                android:text="@string/todo"
                                style="@style/viewParent.headerText.HomeCardTitle" />


                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>




        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
